--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>jersey-tutorials</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>snapshot-repository.java.net</id>
+            <name>Java.net Snapshot Repository for Maven</name>
+            <url>https://maven.java.net/content/repositories/snapshots</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
 
 </project>
