--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>ie.altech.jersey</groupId>
-    <artifactId>jersey-tutorials</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-
-    <name>jersey-tutorials</name>
-
+    <groupId>e.altech.jersey</groupId>
+    <artifactId>jersey-tutorial</artifactId>
     <packaging>jar</packaging>
-
-
-
-    <!-- Properties -->
-    <properties>
-        <jersey.version>2.26-b09</jersey.version>
-        <dropwizard.version>1.0.6</dropwizard.version>
-        <dropwizard.guice.version>1.0.0.3</dropwizard.guice.version>
-    </properties>
-
-    <!--
-    <repositories>
-        <repository>
-            <id>snapshot-repository.java.net</id>
-            <name>Java.net Snapshot Repository for Maven</name>
-            <url>https://maven.java.net/content/repositories/snapshots</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-    -->
+    <version>1.0-SNAPSHOT</version>
+    <name>Jersey Tutorial</name>
+    <url>http://maven.apache.org</url>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.6</version>
                 <configuration>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
                     <filters>
@@ -52,7 +27,6 @@
                         </filter>
                     </filters>
                 </configuration>
-
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -61,9 +35,9 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ie.altech.jersey.JerseyTutorialServer</mainClass>
+                                    <mainClass>ie.altech.jersey.ServerApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -73,80 +47,31 @@
         </plugins>
     </build>
 
-    <!--
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.glassfish.jersey</groupId>
-                <artifactId>jersey-bom</artifactId>
-                <version>${jersey.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    -->
 
     <dependencies>
 
-        <!-- dropwizard + guice -->
+        <!-- dropwizard dependencies -->
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
-            <version>${dropwizard.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jsr305</artifactId>
-                    <groupId>com.google.code.findbugs</groupId>
-                </exclusion>
-            </exclusions>
+            <version>0.7.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.hubspot.dropwizard</groupId>
             <artifactId>dropwizard-guice</artifactId>
-            <version>${dropwizard.guice.version}</version>
+            <version>0.7.0.2</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>4.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.inject</groupId>
-                    <artifactId>javax.inject</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>aopalliance</groupId>
-                    <artifactId>aopalliance</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>3.0</version>
         </dependency>
 
-        <!--
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-grizzly2-http</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.inject</groupId>
-            <artifactId>jersey-hk2</artifactId>
-        </dependency>
-        -->
-
-        <!-- optional: uncomment this to get JSON support:
-         <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-binding</artifactId>
-        </dependency>
-        -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
